<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    android:orientation="vertical"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:background="#2D6633"
        android:contentDescription="@string/logo"
        android:padding="10dp"
        app:srcCompat="@drawable/logo1" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/registerEmailLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/email"
        android:textColor="#616161"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/registerEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/enter_your_email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575" />

    <TextView
        android:id="@+id/registerNameLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/first_name"
        android:textColor="#616161"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/registerNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/enter_your_first_name"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575" />

    <TextView
        android:id="@+id/registerSurnameLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/last_name"
        android:textColor="#616161"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/registerSurnameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/enter_your_last_name"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575" />

    <TextView
        android:id="@+id/registerPasswordLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/password"
        android:textColor="#616161"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/registerPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/registerConfirmPasswordLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/confirm_password"
        android:textColor="#616161"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/registerConfirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/re_enter_your_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#35ED4A"
        android:fontFamily="sans-serif-medium"
        android:onClick="registerOnClick"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="50dp" />


</LinearLayout>