<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    tools:context=".Settings">

    <ImageView
        android:id="@+id/headerImg"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/greenblock" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userProfileImg"
        android:layout_width="80dp"
        android:layout_height="80sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/user" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userNameLbl"
        android:text="@string/user_name"
        android:textSize="35sp"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@+id/userProfileImg"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userEmailLbl"
        android:text="@string/user_name"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:layout_below="@+id/userNameLbl"
        android:layout_centerHorizontal="true"
        android:textColor="#D3D3D3"
        android:layout_marginTop="3dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerImg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/NotifCardLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/notifications"
            android:textColor="#616161"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#F3F3F3"
            app:cardCornerRadius="10dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notifSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="@string/notificationOn"
                android:textColor="#4C4C4C"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/ccNotifCardLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/streaks"
            android:textColor="#616161"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#F3F3F3"
            app:cardCornerRadius="10dp"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/streaksHelp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:backgroundTint="#CFCFCF"
                    android:fontFamily="sans-serif-medium"
                    android:onClick="displayStreaksHelpOnClick"
                    android:text="@string/what_are_streaks"
                    android:textAllCaps="false"
                    android:textColor="#3A3A3A"
                    android:textSize="16sp"
                    app:cornerRadius="50dp"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/streakSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:text="@string/turn_off_streaks"
                    android:textColor="#4C4C4C"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/how_frequantly_would_you_like_to_add_to_your_collections"
                    android:textColor="#4C4C4C"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/currentStreaksSettingLbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:text="@string/currently_set_to_once_a_day"
                    android:textColor="#4C4C4C"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight=".3"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_vertical"
                        android:text="@string/frequency"
                        android:textColor="#4C4C4C"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/streakFrequencyDropdown"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="15dp"
                        android:layout_weight=".7"
                        android:background="@drawable/rounded_edittext"
                        android:entries="@array/streak_frequency_array"
                        android:spinnerMode="dropdown" />

                </LinearLayout>

                <Button
                    android:id="@+id/updateStreaks"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="#CFCFCF"
                    android:fontFamily="sans-serif-medium"
                    android:onClick="updateStreakFrequencyOnClick"
                    android:text="@string/update_frequency"
                    android:textAllCaps="false"
                    android:textColor="#3A3A3A"
                    android:textSize="16sp"
                    app:cornerRadius="50dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#35ED4A"
        android:fontFamily="sans-serif-medium"
        android:onClick="logOutOnClick"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="50dp" />

</RelativeLayout>